--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Greedy Adaptive Nav</title>
 </head>
 <body>
-   <nav class="greedy-nav">
+   <nav id="greedy" class="greedy-nav">
        <ul>
            <li class="logo"><a href="">Lorem.</a></li>
            <li><a href="">Ipsum.</a></li>
@@ -21,7 +21,7 @@
            <li class="lg"><a href="">Nisi!</a></li>
            <li class="lg"><a href="">In.</a></li>
            <li class="burger">
-               <a href="">
+               <a href="#greedy">
                     <svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 0 24 24" width="30"><path d="M0 0h24v24H0z" fill="none"/><path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/></svg>   
                 </a></li>
        </ul>
